<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.procialize.singleevent.Activity.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colortoolbar"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            android:elevation="@dimen/elevation"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-10dp"
                android:contentDescription=" "
                android:src="@drawable/header_logo" />

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <com.procialize.singleevent.Fonts.RobotoTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center"
                    android:text="Edit Profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsizebigger" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profileIV"
                        android:layout_width="90dp"
                        android:layout_height="98dp"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profilepic_placeholder" />

                    <ProgressBar
                        android:id="@+id/progressView"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                </RelativeLayout>

                <com.procialize.singleevent.Fonts.RobotoTextview
                    android:id="@+id/txt_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center"
                    android:text="Upload Photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsizenormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_firstname"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etfirstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/firstname"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lastname"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etlastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastname"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_designation"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etdesignation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/designation"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_company"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etcompany"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/company"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mobile"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etmobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_desc"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        android:visibility="gone">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etdescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_city"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etcity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_emailid"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etemail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_country"
                        style="@style/TextAppearence.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        android:visibility="gone">

                        <com.procialize.singleevent.Fonts.RobotoTextInputEditext
                            android:id="@+id/Etcountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsizesmall" />
                    </android.support.design.widget.TextInputLayout>


                    <com.procialize.singleevent.Fonts.RobotoButton
                        android:id="@+id/savebtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linearLayout"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorwhite"
                        android:elevation="@dimen/elevation"
                        android:paddingLeft="70dp"
                        android:paddingRight="70dp"
                        android:stateListAnimator="@null"
                        android:text="@string/save"
                        android:textColor="@color/logintxt"
                        android:textSize="@dimen/textsizesmall"
                        android:textStyle="bold"
                        android:translationZ="5dp" />


                </LinearLayout>


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


</LinearLayout>
